--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
       let y = canvas.height - 30;
       let dx = 2;
       let dy = -2;
+      const ballRadius = 10;
 
       function drawBall() {
         ctx.beginPath();
-        ctx.arc(x, y, 10, 0, Math.PI * 2);
+        ctx.arc(x, y, ballRadius, 0, Math.PI * 2);
         ctx.fillStyle = "#0095DD";
         ctx.fill();
         ctx.closePath();
@@ -40,9 +41,35 @@
       function draw() {
         ctx.clearRect(0, 0, canvas.width, canvas.height);
         drawBall();
+       
+        // bounce off top wall by reversing y-axis movement
+        if (y + dy < 0) {
+          dy = -dy;
+        }
+        //bounce off bottom wall
+        if (y + dy > canvas.height) {
+          dy = -dy;
+        }
+        //bounce off left and right
+        if (x + dx > canvas.width || x + dx < 0) {
+          dx = -dx;
+        }
+
+        if (y + dy > canvas.height || y + dy < 0) {
+          dy = -dy;
+        }
+      
+        //adjusting for radius of ball so it doesn't 'sink' into the wall
+        if (x + dx > canvas.width - ballRadius || x + dx < ballRadius) {
+          dx = -dx;
+        }
+        if (y + dy > canvas.height - ballRadius || y + dy < ballRadius) {
+          dy = -dy;
+        }
         x += dx;
         y += dy;
       }
+
 
       setInterval(draw, 10);
       //function will be executed within setInterval every 10 ms
