--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
       let dx = 2;
       let dy = -2;
       const ballRadius = 10;
+      const paddleHeight = 10;
+      const paddleWidth = 75;
+      let paddleX = (canvas.width - paddleWidth) / 2;
+      let rightPressed = false;
+      let leftPressed = false;
+      //false because at the beginning the control buttons are not pressed
+
 
       function drawBall() {
         ctx.beginPath();
@@ -38,9 +45,19 @@
         ctx.closePath();
       }
 
+      function drawPaddle() {
+        ctx.beginPath();
+        ctx.rect(paddleX, canvas.height - paddleHeight, paddleWidth, paddleHeight);
+        ctx.fillStyle = "#0095DD";
+        ctx.fill();
+        ctx.closePath();
+      }
+
+
       function draw() {
         ctx.clearRect(0, 0, canvas.width, canvas.height);
         drawBall();
+        drawPaddle();
        
         // bounce off top wall by reversing y-axis movement
         if (y + dy < 0) {
@@ -66,10 +83,36 @@
         if (y + dy > canvas.height - ballRadius || y + dy < ballRadius) {
           dy = -dy;
         }
+        //checking to see if the RT or LT keys are pressed
+        if (rightPressed) {
+          paddleX = Math.min(paddleX + 7, canvas.width - paddleWidth);
+        } else if (leftPressed) {
+          paddleX = Math.max(paddleX - 7, 0);
+        }
+
         x += dx;
         y += dy;
       }
 
+      //event listeners for control buttons
+      document.addEventListener("keydown", keyDownHandler, false);
+      document.addEventListener("keyup", keyUpHandler, false);
+
+      function keyDownHandler(e) {
+        if (e.key === "Right" || e.key === "ArrowRight") {
+          rightPressed = true;
+        } else if (e.key === "Left" || e.key === "ArrowLeft") {
+          leftPressed = true;
+        }
+      }
+
+      function keyUpHandler(e) {
+        if (e.key === "Right" || e.key === "ArrowRight") {
+          rightPressed = false;
+        } else if (e.key === "Left" || e.key === "ArrowLeft") {
+          leftPressed = false;
+        }
+      }
 
       setInterval(draw, 10);
       //function will be executed within setInterval every 10 ms
