added game over
Added game over if there is a collision with the bottom wall

--- a/index.html
+++ b/index.html
@@ -80,9 +80,20 @@
         if (x + dx > canvas.width - ballRadius || x + dx < ballRadius) {
           dx = -dx;
         }
-        if (y + dy > canvas.height - ballRadius || y + dy < ballRadius) {
+        //if ball hits bottom wall
+        if (y + dy < ballRadius) {
           dy = -dy;
+        } else if (y + dy > canvas.height - ballRadius) {
+          if (x > paddleX && x < paddleX + paddleWidth) {
+            dy = -dy;
+          } else {
+          alert("GAME OVER");
+          document.location.reload();
+          clearInterval(interval); // Needed for Chrome to end game
+          }
         }
+
+
         //checking to see if the RT or LT keys are pressed
         if (rightPressed) {
           paddleX = Math.min(paddleX + 7, canvas.width - paddleWidth);
@@ -114,7 +125,7 @@
         }
       }
 
-      setInterval(draw, 10);
+      const interval = setInterval(draw, 10);
       //function will be executed within setInterval every 10 ms
 
     </script>
