--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
           bricks[c][r] = { x: 0, y: 0, status: 1 };
         }
       }
+      let score = 0;
 
       function drawBall() {
         ctx.beginPath();
@@ -91,6 +92,7 @@
         drawBricks();
         drawBall();
         drawPaddle();
+        drawScore();
         collisionDetection();
 
        
@@ -159,7 +161,6 @@
           leftPressed = false;
         }
       }
-
       function collisionDetection() {
         for (let c = 0; c < brickColumnCount; c++) {
           for (let r = 0; r < brickRowCount; r++) {
@@ -173,11 +174,26 @@
               ) {
                 dy = -dy;
                 b.status = 0;
+                score++;
+                if (score === brickRowCount * brickColumnCount) {
+                  alert("YOU WIN, CONGRATULATIONS!");
+                  document.location.reload();
+                  clearInterval(interval); // Needed for Chrome to end game
+                }
               }
             }
           }
         }
       }
+
+      
+
+      function drawScore() {
+        ctx.font = "16px Arial";
+        ctx.fillStyle = "#0095DD";
+        ctx.fillText(`Score: ${score}`, 8, 20);
+      }
+
 
 
 
