--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <canvas id="myCanvas" width="480" height="320"></canvas>
 
-    <script src="index.js">
+    <script src="index.js" type="module">
 
     </script>
   </body>
