--- a/test.html
+++ b/test.html
@@ -22,14 +22,22 @@
     <script type="module">
         import Bricks from './Bricks.js';
         import Background from './Background.js';
+        import Paddle from './Paddle.js';
+        import Ball from './Ball.js';
+        import Lives from './Lives.js';
+        import Score from './Score.js';
+
         
         const back = new Background(0, 0, 480, 320);
         const grid = new Bricks(5, 3);
+        const paddle1 = new Paddle();
+        const ball1 = new Ball(0, 0, 10);
         const canvas =  document.getElementById('myCanvas');
         const ctx = canvas.getContext('2d');
         back.render(ctx);
         grid.render(ctx);
-        
+        paddle1.render(ctx, canvas);
+        ball1.render(ctx);
     </script>
   </body>
 </html>
